Fixed the issue of Hamburger icon being visible on large screens

--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -33,6 +33,11 @@
   text-decoration: none;
 }
 
+.menuBtn {
+  display: none;
+  cursor: pointer;
+}
+
 @media screen and (max-width: 830px) {
   .navbar {
     flex-direction: column;
@@ -51,7 +56,6 @@
 
   .menuBtn {
     display: block;
-    cursor: pointer;
   }
 
   .menuItems {
